# nemo

./: .gitignore  ChangeLog.md  Graph.cabal  LICENSE  NOTES.md  OrdSet.hs  README.md  git grep exitFailure  nemo.hs  orDie.hs  package.yaml  scratch.hs  stack build  stack.yaml  test.hs  topoSort.hs
NemoLib/: AsMap.hs  Associate.hs  Cons.hs  CreateSubstitutions.hs  Delete.hs  DfsVisit.hs  Elem.hs  EscapeRegex.hs  ExtractDependencies.hs  ExtractPointer.hs  ExtractPointers.hs  File.hs  FileToNemoNode.hs  FindNemoRootDirectory.hs  FlipFmap.hs  FoldNemoNodeToShadowNode.hs  FromList.hs  GetAddress.hs  GetClosure.hs  GetContents.hs  GetDependencies.hs  GetFile.hs  GetModifiedFiles.hs  GetName.hs  GetNemoDirectoryPath.hs  GetNemoFilePath.hs  GetNemoRootDirectory.hs  GetNewFiles.hs  GetParentDirectory.hs  GetShadowDirectoryPath.hs  If.hs  Init.hs  IsNemoRootDirectory.hs  Lookup.hs  LookupDependencies.hs  NemoNode.hs  NemoNodeToShadowNode.hs  NemoNodesToShadowNodes.hs  OrdSet.hs  PathToAddress.hs  (+12 more)
app/: Main.hs
examples/list/: List.c  ListNode.c  NOTES.md  append.c  empty.c  main.c  size.c
examples/list/nemolib/metadata/: ListNode_a9Cquj4pE4zY2z0XmVfFDEwWkyCI7OFrFsxmHtfrq5oe  nemo34440-1_a9Cquj4pE4zY2z0XmVfFDEwWkyCI7OFrFsxmHtfrq5oe
examples/list/nemolib/src/: nemo34440-1_a9Cquj4pE4zY2z0XmVfFDEwWkyCI7OFrFsxmHtfrq5oe
it/: Select.hs  SelectOdd.hs
src/: Config.hs  Directory.hs  EscapeRegex.hs  File.hs  Graph.hs  GraphTest.hs  Hash.hs  Haskell.hs  HaskellRead.hs  HaskellTransform.hs  HaskellUpdate.hs  Lib.hs  Main.hs  Nemo.hs  NemoConfig.hs  NemoGraph.hs  NemoPath.hs  NemoTest.hs  Other.hs  Read.hs  ReadApi.hs  Stack.hs  StateCtl.hs  Update.hs  UpdateApi.hs  Util.hs  Write.hs
src/Control/: Nemo.hs
src/Data/List/: Stack.hs
src/Data/Nemo/: Checkin.hs  Codec.hs  Directive.hs  Env.hs  Error.hs  Extensions.hs  Log.hs  Name.hs  NcuInfo.hs  Token.hs
src/Data/Nemo/Cat/: State.hs
src/Data/Nemo/CheckIn/: State.hs
src/Data/Nemo/Checkin/: Lens.hs
src/Data/Nemo/Directive/: Lens.hs  Parser.hs
src/Data/Nemo/Env/: Lens.hs
src/Data/Nemo/Eval/: Expression.hs
src/Data/Nemo/Eval/Expression/: Parser.hs
src/Data/Nemo/Name/: Lens.hs  Parser.hs
src/Nemo/: Cat.hs  CheckIn.hs  Clang.hs  Config.hs  Eval.hs  Hash.hs  Init.hs  Parser.hs  Util.hs
src/Parser/: Nemo.hs
src/Parser/Nemo/: Directive.hs  Name.hs
src/Parser/Nemo/Eval/: Expression.hs
src/System/: Nemo.hs
test/: DirectorySpec.hs  Examples.hs  FileSpec.hs  GraphSpec.hs  HaskellReadSpec.hs  HaskellSpec.hs  HaskellTransformSpec.hs  HaskellUpdateSpec.hs  NemoGraphSpec.hs  NemoSpec.hs  NemoTest.hs  Spec.hs
