name:               Graph
version:            0.1.0
Build-Type:         Simple
cabal-version:      >= 1.10
author:             Jesus E. Larios Murillo
license:            BSD3
license-file:       LICENSE
extra-source-files: README.md

library
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base
                  , containers
                  , transformers
                  , filepath
                  , hspec
                  , MissingH
                  , cryptohash
                  , bytestring
                  , base16-bytestring
                  , text
                  , regex-compat
                  , regex-posix
                  , directory
  exposed-modules:  File
                  , Graph
                  , NemoGraph
                  , Nemo
                  , StateCtl
                  , Hash
                  , Util
                  , EscapeRegex
                  , HaskellRead
                  , HaskellTransform
                  , Directory
                  , Read
                  , NemoConfig
                  , Update

executable Graph
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:    base
                  , Graph
                  , directory
                  , filepath
                  , containers

test-suite GraphTest
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  hs-source-dirs:   test
  build-depends:    base
                  , Graph
                  , hspec
                  , containers
                  , MissingH
                  , regex-compat
                  , regex-posix
