name:               Graph
version:            0.1.0
Build-Type:         Simple
cabal-version:      >= 1.10
author:             Jesus E. Larios Murillo
license:            BSD3
license-file:       LICENSE
extra-source-files: README.md

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
                    -fno-warn-name-shadowing
                    -fwarn-tabs
  build-depends:    base
                  , MissingH
                  , base16-bytestring
                  , bytestring
                  , containers
                  , cryptohash
                  , directory
                  , filepath
                  , hspec
                  , regex-compat
                  , regex-posix
                  , text
                  , transformers

  exposed-modules:  Config
                  , Directory
                  , EscapeRegex
                  , File
                  , Graph
                  , Hash
                  , HaskellRead
                  , HaskellUpdate
                  , Nemo
                  , NemoGraph
                  , NemoPath
                  , Read
                  , StateCtl
                  , Update
                  , UpdateApi
                  , Util

executable Graph
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall
                    -fno-warn-name-shadowing
                    -fwarn-tabs
  build-depends:    base
                  , Graph
                  , containers
                  , directory
                  , filepath

test-suite GraphTest
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  hs-source-dirs:   test
  build-depends:    base
                  , Graph
                  , MissingH
                  , containers
                  , hspec
                  , regex-compat
                  , regex-posix
